--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,19 @@
 	<groupId>alde.commons</groupId>
 	<artifactId>AldeCommons</artifactId>
 	<version>0.1</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <name>AldeCommons</name>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<name>AldeCommons</name>
 	<description>Shared projects used by a multitude of my own personal projects.</description>
 	<url>https://github.com/iObsidian/AldeCommons</url>
 
@@ -111,6 +111,35 @@
 			<version>1.7.25</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.googlecode.soundlibs/basicplayer -->
+		<dependency>
+			<groupId>com.googlecode.soundlibs</groupId>
+			<artifactId>basicplayer</artifactId>
+			<version>3.0.0.0</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.2</version>
+			<scope>test</scope>
+		</dependency>
+
+
+
+
 
 
 	</dependencies>
