--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 
     <groupId>alde.commons</groupId>
     <artifactId>AldeCommons</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    
+    <version>2.0.0</version>
+
     <!-- Output to jar format -->
     <packaging>jar</packaging>
 
