--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,12 @@
         <log4j.version>1.2.17</log4j.version>
     </properties>
 
+
+
+
     <dependencies>
+
+
        <!-- <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -58,9 +63,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
 
-    
 </project>
